LiveText-LiveText3.14/src/objects/Exception__c.object
<CustomObject>
    <description>Exception</description>
    <fields>
        <fullName>AssociatedUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated User</description>
        <label>AssociatedUser</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ErrorDescription__c</fullName>
        <description>Error Description</description>
        <label>ErrorDescription</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ObjectId__c</fullName>
        <description>Object Id.</description>
        <label>ObjectId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Priority</description>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>LiveText Exception</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Exception Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LiveText Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>